2006-01-04  Marcus Brinkmann  <marcus@g10code.de>

	* patches/glib/01-giowin32.patch,
	patches/glib-2.6.6/01-giowin32.patch,
	patches/glib-2.8.4/01-giowin32.patch: Notify write thread about fd
	close.

2006-01-03  Marcus Brinkmann  <marcus@g10code.de>

	* patches/glib-2.8.4/01-giowin32.patch: New file.

2005-12-31  Marcus Brinkmann  <marcus@g10code.de>

	* glib/02-windres.patch: New file.
	* glib-2.6.6/02-windres.patch: New file.

	* configure.ac (glib): Make it a source package.
	* src/Makefile.am (gpg4win_bpkgs): Move glib to ...
	(gpg4win_spkgs): ... here.
	* patches/glib/01-giowin32.patch: New file.
	* patches/glib-2.6.6/01-giowin32.patch: New file.
	* src/config.site: New file.
	* src/gpg4win.mk.in (tsdir): New variable.
	(SETVARS): Use $(idir), not ${idir}.  Define CONFIG_SITE.

2005-12-18  Marcus Brinkmann  <marcus@g10code.de>

	* src/inst-sylpheed-claws.nsi: Install GPG plugins.
	* src/uninst-sylpheed-claws.nsi: Uninstall GPG plugins.

	* src/uninst-eudoragpg.nsi: Delete file
	$INSTDIR\share\eudoragpg\eudoragpg.html.

2005-12-13  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Updated GPGee.
	* src/inst-gpgee.nsi: Adjusted for new location of packages.
	* m4/gpg4win.m4 (GPG4WIN_BPKG_BINSRC): Allow for -source suffix
	and uppercase package names.

2005-12-12  Werner Koch  <wk@g10code.com>

	* configure.ac: Test vor zcat.

2005-12-09  Werner Koch  <wk@g10code.com>

	* Makefile.am (SUBDIRS): Include doc dir.
	* configure.ac: Add new Makefiles.

	* doc/ChangeLog: New.  Moved relevant entries to that file.

2005-12-08  Werner Koch  <wk@g10code.com>

	* packages/download.sh: Implemented CHK statement.
	* packages/packages.current: Add chk lines for all packages.

2005-12-07  Werner Koch  <wk@g10code.com>

	Released 0.3.1.

2005-12-06  Werner Koch  <wk@g10code.com>

	Released 0.3.0.

2005-12-02  Werner Koch  <wk@g10code.com>

	* packages/download.sh: New option --force.  Default to skip
	already existing packages.
